--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,17 @@ services:
     -  /zfs-tank/elasticsearch:/usr/share/elasticsearch/data
     environment:
     - cluster.name=docker-cluster
-    - discovery.zen.minimum_master_nodes=1
-    - "ES_JAVA_OPTS=-Xms8192m -Xmx8192m"
+    - bootstrap.memory_lock=true
+    - discovery.type=single-node
+    - index.number_of_replicas=0
+    - "ES_JAVA_OPTS=-Xms4096m -Xmx4096m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
 
   logstash:
     image: docker.elastic.co/logstash/logstash-oss:6.2.3
