logstash: remove apache config

--- a/pipeline/logstash.conf
+++ b/pipeline/logstash.conf
@@ -1,27 +1,12 @@
 input {
-  beats {
-    port => 5044
-  }
-}
+  kafka {
+    bootstrap_servers => "dcache-lab004.desy.de:9092"
+    topics => ["billing"]
+    client_id => "logstash"
 
-filter {
-    grok {
-      match => { "message" => "%{COMBINEDAPACHELOG}" }
-    }
-    mutate {
-      convert => ["response", "integer"]
-      convert => ["bytes", "integer"]
-      convert => ["responsetime", "float"]
-    }
-    date {
-      match => [ "timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
-    }
-    geoip {
-      source => "clientip"
-    }
-    useragent {
-      source => "agent"
-    }
+    type => "dcache_billing"
+    codec => "json"
+  }
 }
 
 output {
